2007-05-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/31559
	Backport from mainline.
	* func_assign.f90: New test.

2007-05-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/31167
	Backport from mainline.
	* gcc.target/i386/pr31167.c: New test.

2007-05-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/31395
	* gfortran.dg/fmt_colon.f90: New test.

2007-05-20  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/31618
	Backport from trunk.
	* gfortran.dg/backspace_8.f:  New test case.

2007-05-20  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/31196
	Backport from trunk.
	* gfortran.dg/reshape_transpose_1.f90:  New test.

2007-05-17  Ian Lance Taylor  <iant@google.com>

	PR tree-optimization/31953
	* gcc.c-torture/compile/pr31953.c: New test.

2007-05-17  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/execute/20070517-1.c: New test.

2007-05-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/31725
	* gfortran.dg/substr_4.f: New test.

2007-05-13  Release Manager

	* GCC 4.2.0 released.

2007-05-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/31797
	* gcc.c-torture/compile/pr31797.c: New testcase.

2007-05-11  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/31880
	* gfortran.dg/unf_read_corrupted_2.f90: New test.

2007-04-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR C++/30221
	* g++.dg/init/ptrfn2.C: New test.
	* g++.dg/init/ptrfn3.C: New test.

2007-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/31711
	* gfortran.dg/dependency_21.f90: New test.

2007-04-27  Ian Lance Taylor  <iant@google.com>

	PR middle-end/31710
	* gcc.c-torture/compile/pr31710.c: New test.

2007-04-26  Ian Lance Taylor  <iant@google.com>

	PR target/28675
	* gcc.c-torture/compile/pr28675.c: New test.

2007-04-26  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR C++/30016
	* g++.dg/ext/vector6.C: New test.

2007-04-26  Richard Guenther  <rguenther@suse.de>
	Daniel Berlin  <dberlin@dberlin.org>
